# ykq368-tool

./: .gitignore  build.sc  flake.nix
fpga/: pin.qsf
fpga/sim/src/sim/remote_control/atsmart/ykq368/: endpoint.scala  instr_proc.scala  pwm_encoder.scala
fpga/sim/src/sim/transceiver/cc1101/: endpoint.scala  lib.scala
fpga/src/rf_tool/fpga/: keypad.scala  main.scala
fpga/src/rf_tool/fpga/remote_control/atsmart/ykq368/: endpoint.scala
fpga/src/rf_tool/fpga/transceiver/cc1101/: endpoint.scala  lib.scala
gnuradio/: capture.grc
host/: Cargo.toml  default.nix
host/rf-tool/: Cargo.toml
host/rf-tool/src/: lib.rs
host/rf-tool/src/remote_control/: atsmart.rs
host/rf-tool/src/transceiver/: cc1101.rs
host/wave-to-fst/: Cargo.toml
host/ykq368-decoder/: Cargo.toml
host/ykq368-decoder/src/: main.rs
host/ykq368-tester/: Cargo.toml
host/ykq368-tester/src/: lib.rs  main.rs
wave-to-fst/: default.nix
