[package]
name = "ykq368-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport.workspace = true
serde.workspace = true
strum = { version = "0.26.3", features = ["derive"] }
dialoguer = { version = "0.11.0", default-features = false }
console = "0.15.8"
rustix = { version = "0.38.37", features = ["fs", "event", "stdio", "termios"] }
anyhow = "1.0.88"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
clap = { version = "4.5.17", features = ["derive"] }
ciborium = "0.2.2"
rand = "0.8.5"

rf-tool.workspace = true

